cluster/apps/networking/external-ingresses/nas-minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas-minio
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  rules:
    hosts:
      - host: &host-console "minio.${SECRET_DOMAIN}"
        http:
          paths:
            - backend:
                service:
                  name: web
                  port: 9001
              path: /
              pathType: Prefix
      - host: &host-api "s3.${SECRET_DOMAIN}"
        http:
          paths:
            - backend:
                service:
                  name: api
                  port: 9000
              path: /
              pathType: Prefix
    tls:
      - hosts:
          - *host-console
          - *host-api
        secretName: minio-tls
---
apiversion: v1
kind: Service
metadata:
  name: nas-minio
  namespace: networking
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 9001
    - name: api
      port: 80
      protocol: TCP
      targetPort: 9000
  type: ClusterIP
